2010-03-02  Mark Probst  <mark.probst@gmail.com>

	* tools/sgen-grep-binprot.c: Tool for searching through the binary
	protocol files generated by SGen.

2010-02-26  Miguel de Icaza  <miguel@novell.com>

	* Make the scripts default to 4.0 now.

2009-05-21  Miguel de Icaza  <miguel@novell.com>

	* Check for sys/select.h as well

Wed Feb 24 15:47:16 CET 2010 Paolo Molaro <lupus@ximian.com>

	* configure.in, data/mono-2.pc.in, data/Makefile.am,
	samples/embed/*: increase the API version.

2010-02-18  Marek Habersack  <mhabersack@novell.com>

	* scripts/mono-configuration-crypto.in: added

	* scripts/Makefile.am: added mono-configuration-crypto targets

2010-01-27  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Fix the setting of LLVM_CXXFLAGS.

2010-01-22  Andrés G. Aragoneses  <knocte@gmail.com>

	* configure.in: Improve r150055 by checking for CXX=g++ as well, according to
	http://lists.gnu.org/archive/html/bug-autoconf/2002-04/msg00077.html

2010-01-22  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable the solaris tar check on !solaris platforms.

2010-01-22  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Check whenever g++ is installed, since libtool requires it
	even if no c++ files will be compiled.
	See BNC#572871.

2010-01-22  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add -fno-rrti to CXXFLAGS.

2010-01-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* configure.in: Add support for disabling mdb support.

2010-01-15  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Don't define TARGET_WIN32 when --target is used.

2010-01-15  Zoltan Varga  <vargaz@gmail.com>

	* scripts/get-cygwin-deps.sh: New file. Contains a script to download and setup
	the dependencies needed for compiling mono on cygwin.

2010-01-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* scripts/Makefile.am: Add peverify script.

	* scripts/peverify.in: Added.

2009-12-22  Geoff Norton  <gnorton@novell.com>

	* configure.in: Fix invalid escaping.  Patch from Spina from