@@ -5,12 +5,16 @@ if CROSS_COMPILING
 SUBDIRS = po $(libgc_dir) $(eglib_dir) mono $(ikvm_native_dir) data runtime scripts man samples web msvc $(docs_dir)
 # Keep in sync with SUBDIRS
 ## 'tools' is not normally built
-DIST_SUBDIRS = po libgc $(eglib_dir) mono ikvm-native data runtime scripts man samples web tools msvc docs
+DIST_SUBDIRS = po libgc $(eglib_dir) mono ikvm-native         data runtime scripts man samples web tools msvc docs
+else
+if MOONLIGHT
+SUBDIRS =    $(libgc_dir) $(eglib_dir) mono $(ikvm_native_dir)         data runtime
 else
 SUBDIRS = po $(libgc_dir) $(eglib_dir) mono $(ikvm_native_dir) support data runtime scripts man samples web msvc $(docs_dir)
 # Keep in sync with SUBDIRS
 ## 'tools' is not normally built
 DIST_SUBDIRS = po libgc $(eglib_dir) mono ikvm-native support data runtime scripts man samples web tools msvc docs
+endif
 endif
 
 EXTRA_DIST= nls.m4 po.m4 progtest.m4 mono-uninstalled.pc.in build-mingw32.sh LICENSE mkinstalldirs autogen.sh 
